--- a/pages/category.html
+++ b/pages/category.html
@@ -70,17 +70,17 @@
           </div>
           <ul class="small-text-list my-4">
               <li><a href="category.html">Furniture</a></li>
-              <li><a href="#">Kitchen & appliances</a></li>
-              <li><a href="#">Beds & mattresses</a></li>
-              <li><a href="#">Storage & organisation</a></li>
-              <li><a href="#">Textiles</a></li>
-              <li><a href="#">Decoration</a></li>                
-              <li><a href="#">Bathroom products</a></li>                
-              <li><a href="#">Outdoor products</a></li>                
-              <li><a href="#">Lighting</a></li>                
-              <li><a href="#">Rugs, mats & flooring</a></li>                
-              <li><a href="#">Baby & children</a></li>
-              <li><a href="#">More</a></li>                            
+              <li><a href="category.html">Kitchen & appliances</a></li>
+              <li><a href="category.html">Beds & mattresses</a></li>
+              <li><a href="category.html">Storage & organisation</a></li>
+              <li><a href="category.html">Textiles</a></li>
+              <li><a href="category.html">Decoration</a></li>                
+              <li><a href="category.html">Bathroom products</a></li>                
+              <li><a href="category.html">Outdoor products</a></li>                
+              <li><a href="category.html">Lighting</a></li>                
+              <li><a href="category.html">Rugs, mats & flooring</a></li>                
+              <li><a href="category.html">Baby & children</a></li>
+              <li><a href="category.html">More</a></li>                            
           </ul>
       </div>
   
@@ -91,7 +91,7 @@
               <span class="head-title">Rooms</span>
           </div>
           <div class="row mx-auto g-4 my-4">
-              <a class="card category-card col-3 col-md-5" href="#">
+              <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                   src="https://www.ikea.com/images/an-enhet-washbasin-and-cabinet-and-open-shelving-with-a-roun-08edae8f788e473a9605e4b398900cb6.jpg?f=xxxs"
                   class="card-img-top"
@@ -101,7 +101,7 @@
                   <p class="card-text">Bathroom</p>
                   </div>
               </a>
-              <a class="card category-card col-3 col-md-5" href="#">
+              <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                   src="https://www.ikea.com/images/a-vadheim-upholstered-bed-with-vitkloever-bed-linen-stands-i-18d599765b42ee3396abb67b8a245606.jpg?f=xxxs"
                   class="card-img-top"
@@ -111,7 +111,7 @@
                   <p class="card-text">Bedroom</p>
                   </div>
               </a>
-              <a class="card category-card col-3 col-md-5" href="#">
+              <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                   src="https://www.ikea.com/images/a-tuffing-bunk-bed-in-a-childrens-room-with-a-football-and-t-57c6d97b0e97fa11316c8fea272a7f0d.jpg?f=xxxs"
                   class="card-img-top"
@@ -121,7 +121,7 @@
                   <p class="card-text">Children's room</p>
                   </div>
               </a>
-              <a class="card category-card col-3 col-md-5" href="#">
+              <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                   src="https://www.ikea.com/images/a-dining-area-by-a-window-with-a-large-dining-table-six-meta-46845de50b0ad73d0b9731140141b6e3.jpg?f=xxxs"
                   class="card-img-top"
@@ -131,7 +131,7 @@
                   <p class="card-text">Dining</p>
                   </div>
               </a>
-              <a class="card category-card col-3 col-md-5" href="#">
+              <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                       src="https://www.ikea.com/images/a-hallway-where-a-pinnig-coat-rack-and-shoe-bench-stand-agai-2dc4a103bc0ac4158557a90ebc0aadd3.jpg?f=xxxs"
                       class="card-img-top"
@@ -141,7 +141,7 @@
                       <p class="card-text">Hallway</p>
                   </div>
                   </a>
-                  <a class="card category-card col-3 col-md-5" href="#">
+                  <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                       src="https://www.ikea.com/images/an-industrial-style-studio-at-home-with-high-ceilings-furnit-d6ba3f797a6cbed87478bad1d8dbd652.jpg?f=xxxs"
                       class="card-img-top"
@@ -151,7 +151,7 @@
                       <p class="card-text">Home office</p>
                   </div>
                   </a>
-                  <a class="card category-card col-3 col-md-5" href="#">
+                  <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                       src="https://www.ikea.com/images/a-contemporary-and-decluttered-kitchen-with-bodarp-kitchen-f-0fd7f2c13233700c427237c449cc2982.jpg?f=xxxs"
                       class="card-img-top"
@@ -161,7 +161,7 @@
                       <p class="card-text">Kitchen</p>
                   </div>
                   </a>
-                  <a class="card category-card col-3 col-md-5" href="#">
+                  <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                       src="https://www.ikea.com/images/an-aepplaryd-sofa-with-three-coffee-tables-in-front-on-a-blu-ad40b43a98816f1805e40c1d7ef6d681.jpg?f=xxxs"
                       class="card-img-top"
@@ -171,7 +171,7 @@
                       <p class="card-text">Living room</p>
                   </div>
                   </a>
-                  <a class="card category-card col-3 col-md-5" href="#">
+                  <a class="card category-card col-3 col-md-5" href="category.html">
                   <img
                       src="https://www.ikea.com/images/a-small-balcony-with-a-wooden-table-and-chairs-artificial-gr-f6ba826dc19b000e2975955fd78e45a4.jpg?f=xxxs"
                       class="card-img-top"
