--- a/shoppingBag.html
+++ b/shoppingBag.html
@@ -30,170 +30,170 @@
   </head>
   <body>
     <!--#region sidebar menu -->
-        <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
-        aria-controls="offcanvasExample">
-        <i class="bi bi-list"></i>
-    </button>
+    <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample"
+    aria-controls="offcanvasExample">
+    <i class="bi bi-list"></i>
+</button>
 
-    <div class="offcanvas offcanvas-start menu-bar" tabindex="-1" id="offcanvasExample"
-        aria-labelledby="offcanvasExampleLabel">
-        <div class="offcanvas-header menu-header">
-            <button type="button" class="menu-btn" data-bs-dismiss="offcanvas" onclick="{ShowMain()}"><i
-                    class="bi bi-x"></i></button>
-            <img src="https://www.ikea.com/eg/en/static/ikea-logo.f7d9229f806b59ec64cb.svg" />
-        </div>
-        <!-- main body -->
-        <div id="main-menu" class="offcanvas-body menu-body">
-            <ul>
-                <li onclick="{ShowDiv('p-content')}"><a href="#">Products</a></li>
-                <li onclick="{ShowDiv('r-content')}"><a href="#">Rooms</a></li>
-                <li onclick="{ShowDiv('o-content')}"><a href="#">Offers</a></li>
-                <li onclick="{ShowDiv('w-content')}"><a href="#">What's new</a></li>
-            </ul>
-            <ul class="small-text-list">
-                <li><a href="./pages/stores.html">Stores</a></li>
-                <li><a href="./pages/conactUs.html">Contact us</a></li>
-            </ul>
-            <div class="d-flex flex-row justify-content-around">
-                <select type="button" class="selector-btn">
-                    <i class="fas fa-chevron-down"></i>
-                    <option>English</option>
-                    <option>العربية</option>
-                </select>
-                <button class="selector-btn">
-                    <i class="bi bi-globe"></i>
-                    Change country
-                </button>
-            </div>
-        </div>
-
-        <!-- product body -->
-        <div id="p-content" class="offcanvas-body menu-body other-content">
-            <div class="d-flex flex-row">
-                <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
-                        class="bi bi-arrow-left-short"></i></button>
-                <span class="head-title">Products</span>
-            </div>
-            <ul class="small-text-list my-4">
-                <li><a href="./pages/category.html">Furniture</a></li>
-                <li><a href="#">Kitchen & appliances</a></li>
-                <li><a href="#">Beds & mattresses</a></li>
-                <li><a href="#">Storage & organisation</a></li>
-                <li><a href="#">Textiles</a></li>
-                <li><a href="#">Decoration</a></li>
-                <li><a href="#">Bathroom products</a></li>
-                <li><a href="#">Outdoor products</a></li>
-                <li><a href="#">Lighting</a></li>
-                <li><a href="#">Rugs, mats & flooring</a></li>
-                <li><a href="#">Baby & children</a></li>
-                <li><a href="#">More</a></li>
-            </ul>
-        </div>
-
-        <!-- Room body -->
-        <div id="r-content" class="offcanvas-body menu-body other-content">
-            <div class="d-flex flex-row">
-                <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
-                        class="bi bi-arrow-left-short"></i></button>
-                <span class="head-title">Rooms</span>
-            </div>
-            <div class="row mx-auto g-4 my-4">
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/an-enhet-washbasin-and-cabinet-and-open-shelving-with-a-roun-08edae8f788e473a9605e4b398900cb6.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Bathroom</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-vadheim-upholstered-bed-with-vitkloever-bed-linen-stands-i-18d599765b42ee3396abb67b8a245606.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Bedroom</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-tuffing-bunk-bed-in-a-childrens-room-with-a-football-and-t-57c6d97b0e97fa11316c8fea272a7f0d.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Children's room</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-dining-area-by-a-window-with-a-large-dining-table-six-meta-46845de50b0ad73d0b9731140141b6e3.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Dining</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-hallway-where-a-pinnig-coat-rack-and-shoe-bench-stand-agai-2dc4a103bc0ac4158557a90ebc0aadd3.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Hallway</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/an-industrial-style-studio-at-home-with-high-ceilings-furnit-d6ba3f797a6cbed87478bad1d8dbd652.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Home office</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-contemporary-and-decluttered-kitchen-with-bodarp-kitchen-f-0fd7f2c13233700c427237c449cc2982.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Kitchen</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/an-aepplaryd-sofa-with-three-coffee-tables-in-front-on-a-blu-ad40b43a98816f1805e40c1d7ef6d681.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Living room</p>
-                    </div>
-                </a>
-                <a class="card category-card col-3 col-md-5" href="#">
-                    <img src="https://www.ikea.com/images/a-small-balcony-with-a-wooden-table-and-chairs-artificial-gr-f6ba826dc19b000e2975955fd78e45a4.jpg?f=xxxs"
-                        class="card-img-top" alt="..." />
-                    <div class="card-body category-body">
-                        <p class="card-text">Garden & balcony</p>
-                    </div>
-                </a>
-            </div>
-        </div>
-
-        <!-- offers body -->
-        <div id="o-content" class="offcanvas-body menu-body other-content">
-            <div class="d-flex flex-row">
-                <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
-                        class="bi bi-arrow-left-short"></i></button>
-                <span class="head-title">Offers</span>
-            </div>
-            <ul class="small-text-list my-4">
-                <li><a href="#">New Lower Price</a></li>
-                <li><a href="#">Sale</a></li>
-            </ul>
-        </div>
-
-        <!-- what's new body -->
-        <div id="w-content" class="offcanvas-body menu-body other-content">
-            <div class="d-flex flex-row">
-                <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
-                        class="bi bi-arrow-left-short"></i></button>
-                <span class="head-title">Offers</span>
-            </div>
-            <ul class="small-text-list my-4">
-                <li><a href="#">New Products</a></li>
-                <li><a href="#">Stories</a></li>
-            </ul>
-        </div>
-
+<div class="offcanvas offcanvas-start menu-bar" tabindex="-1" id="offcanvasExample"
+    aria-labelledby="offcanvasExampleLabel">
+    <div class="offcanvas-header menu-header">
+        <button type="button" class="menu-btn" data-bs-dismiss="offcanvas" onclick="{ShowMain()}"><i
+                class="bi bi-x"></i></button>
+        <img src="https://www.ikea.com/eg/en/static/ikea-logo.f7d9229f806b59ec64cb.svg" />
     </div>
-    <!--#endregion -->
+    <!-- main body -->
+    <div id="main-menu" class="offcanvas-body menu-body">
+        <ul>
+            <li onclick="{ShowDiv('p-content')}"><a href="#">Products</a></li>
+            <li onclick="{ShowDiv('r-content')}"><a href="#">Rooms</a></li>
+            <li onclick="{ShowDiv('o-content')}"><a href="#">Offers</a></li>
+            <li onclick="{ShowDiv('w-content')}"><a href="#">What's new</a></li>
+        </ul>
+        <ul class="small-text-list">
+            <li><a href="./pages/stores.html">Stores</a></li>
+            <li><a href="./pages/conactUs.html">Contact us</a></li>
+        </ul>
+        <div class="d-flex flex-row justify-content-around">
+            <select type="button" class="selector-btn">
+                <i class="fas fa-chevron-down"></i>
+                <option>English</option>
+                <option>العربية</option>
+            </select>
+            <button class="selector-btn">
+                <i class="bi bi-globe"></i>
+                Change country
+            </button>
+        </div>
+    </div>
 
-    <div class="body-container">
+    <!-- product body -->
+    <div id="p-content" class="offcanvas-body menu-body other-content">
+        <div class="d-flex flex-row">
+            <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
+                    class="bi bi-arrow-left-short"></i></button>
+            <span class="head-title">Products</span>
+        </div>
+        <ul class="small-text-list my-4">
+            <li><a href="./pages/category.html">Furniture</a></li>
+            <li><a href="./pages/category.html">Kitchen & appliances</a></li>
+            <li><a href="./pages/category.html">Beds & mattresses</a></li>
+            <li><a href="./pages/category.html">Storage & organisation</a></li>
+            <li><a href="./pages/category.html">Textiles</a></li>
+            <li><a href="./pages/category.html">Decoration</a></li>
+            <li><a href="./pages/category.html">Bathroom products</a></li>
+            <li><a href="./pages/category.html">Outdoor products</a></li>
+            <li><a href="./pages/category.html">Lighting</a></li>
+            <li><a href="./pages/category.html">Rugs, mats & flooring</a></li>
+            <li><a href="./pages/category.html">Baby & children</a></li>
+            <li><a href="./pages/category.html">More</a></li>
+        </ul>
+    </div>
+
+    <!-- Room body -->
+    <div id="r-content" class="offcanvas-body menu-body other-content">
+        <div class="d-flex flex-row">
+            <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
+                    class="bi bi-arrow-left-short"></i></button>
+            <span class="head-title">Rooms</span>
+        </div>
+        <div class="row mx-auto g-4 my-4">
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/an-enhet-washbasin-and-cabinet-and-open-shelving-with-a-roun-08edae8f788e473a9605e4b398900cb6.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Bathroom</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-vadheim-upholstered-bed-with-vitkloever-bed-linen-stands-i-18d599765b42ee3396abb67b8a245606.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Bedroom</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-tuffing-bunk-bed-in-a-childrens-room-with-a-football-and-t-57c6d97b0e97fa11316c8fea272a7f0d.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Children's room</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-dining-area-by-a-window-with-a-large-dining-table-six-meta-46845de50b0ad73d0b9731140141b6e3.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Dining</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-hallway-where-a-pinnig-coat-rack-and-shoe-bench-stand-agai-2dc4a103bc0ac4158557a90ebc0aadd3.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Hallway</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/an-industrial-style-studio-at-home-with-high-ceilings-furnit-d6ba3f797a6cbed87478bad1d8dbd652.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Home office</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-contemporary-and-decluttered-kitchen-with-bodarp-kitchen-f-0fd7f2c13233700c427237c449cc2982.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Kitchen</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/an-aepplaryd-sofa-with-three-coffee-tables-in-front-on-a-blu-ad40b43a98816f1805e40c1d7ef6d681.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Living room</p>
+                </div>
+            </a>
+            <a class="card category-card col-3 col-md-5" href="./pages/category.html">
+                <img src="https://www.ikea.com/images/a-small-balcony-with-a-wooden-table-and-chairs-artificial-gr-f6ba826dc19b000e2975955fd78e45a4.jpg?f=xxxs"
+                    class="card-img-top" alt="..." />
+                <div class="card-body category-body">
+                    <p class="card-text">Garden & balcony</p>
+                </div>
+            </a>
+        </div>
+    </div>
+
+    <!-- offers body -->
+    <div id="o-content" class="offcanvas-body menu-body other-content">
+        <div class="d-flex flex-row">
+            <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
+                    class="bi bi-arrow-left-short"></i></button>
+            <span class="head-title">Offers</span>
+        </div>
+        <ul class="small-text-list my-4">
+            <li><a href="#">New Lower Price</a></li>
+            <li><a href="#">Sale</a></li>
+        </ul>
+    </div>
+
+    <!-- what's new body -->
+    <div id="w-content" class="offcanvas-body menu-body other-content">
+        <div class="d-flex flex-row">
+            <button class="position-sticky menu-btn" onclick="{ShowMain()}"><i
+                    class="bi bi-arrow-left-short"></i></button>
+            <span class="head-title">Offers</span>
+        </div>
+        <ul class="small-text-list my-4">
+            <li><a href="#">New Products</a></li>
+            <li><a href="#">Stories</a></li>
+        </ul>
+    </div>
+
+</div>
+<!--#endregion -->
+
+<div class="body-container">
       <div class="header-messages"></div>
       <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
         <a href="./index.html" class="navbar-brand">
