--- a/productsA.html
+++ b/productsA.html
@@ -194,7 +194,7 @@
           <img class="logo" src="assets/images/ikea-logo.svg" alt="logo"
         /></a>
 
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse" >
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
               <a class="nav-link active" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Products</a>
@@ -217,14 +217,16 @@
             <i class="bi bi-camera"></i>
           </div>
         </div>
-        <div class="navbar-icons">
-          <div class="location-container">
-            <i class="bi bi-shop"></i>
-            <div class="location-text">
-              <small>See opening hours and more</small>
-              <strong>Select store</strong>
-            </div>
+        <div class="location-container">
+          <i class="bi bi-shop"></i>
+          <div class="location-text">
+            <small>See opening hours and more</small>
+            <strong>Select store</strong>
           </div>
+
+        </div>
+        <div class="navbar-icons">
+
           <a href="./Log-in.html"><i class="bi bi-person"></i></a>
           <a href="./favourite.html"><i class="bi bi-heart"></i></a>
           <a href="./shoppingBag.html"><i class="bi bi-minecart-loaded"></i></a>
@@ -234,8 +236,8 @@
         <button
           class="navbar-toggler toggler"
           id="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasExample"
           aria-label="Toggle navigation"
         >
           <span class="navbar-toggler-icon"></span>
