--- a/favourite.html
+++ b/favourite.html
@@ -195,51 +195,77 @@
 
     <div class="body-container">
       <div class="header-messages"></div>
-      <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white">
-          <a href="./index.html" class="navbar-brand">
-              <img class="logo" src="./assets/images/ikea-logo.svg" alt="logo" /></a>
+      <div class="navbar navbar-expand-xl navbar-light fixed-top bg-white pt-4">
+        <a href="#" class="navbar-brand">
+          <img class="logo" src="assets/images/ikea-logo.svg" alt="logo"
+        /></a>
 
-          <div class="collapse navbar-collapse" id="navbarSupportedContent">
-              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                  <li class="nav-item">
-                      <a class="nav-link active" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Products</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Rooms</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">Offers</a>
-                  </li>
-                  <li class="nav-item">
-                      <a class="nav-link" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample">What's new</a>
-                  </li>
-              </ul>
+        <div class="collapse navbar-collapse">
+          <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+            <li class="nav-item">
+              <a
+                class="nav-link active"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample"
+                >Products</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample"
+                >Rooms</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample"
+                >Offers</a
+              >
+            </li>
+            <li class="nav-item">
+              <a
+                class="nav-link"
+                data-bs-toggle="offcanvas"
+                data-bs-target="#offcanvasExample"
+                >What's new</a
+              >
+            </li>
+          </ul>
+        </div>
+        <div class="navbar-search">
+          <div class="search-box">
+            <i class="bi bi-search"></i>
+            <input type="text" placeholder="What are you looking for?" />
+            <i class="bi bi-camera"></i>
           </div>
-          <div class="navbar-search">
-              <div class="search-box">
-                  <i class="bi bi-search"></i>
-                  <input type="text" placeholder="What are you looking for?" />
-                  <i class="bi bi-camera"></i>
-              </div>
+        </div>
+        <div class="location-container">
+          <i class="bi bi-shop"></i>
+          <div class="location-text">
+            <small>See opening hours and more</small>
+            <strong>Select store</strong>
           </div>
-          <div class="navbar-icons">
-              <div class="location-container">
-                  <i class="bi bi-shop"></i>
-                  <div class="location-text">
-                      <small>See opening hours and more</small>
-                      <strong>Select store</strong>
-                  </div>
-              </div>
-              <a href="./Log-in.html"><i class="bi bi-person"></i></a>
-              <a href="./favourite.html"><i class="bi bi-heart"></i></a>
-              <a href="./shoppingBag.html"><i class="bi bi-minecart-loaded"></i></a>
-          </div>
+        </div>
+        <div class="navbar-icons">
+          <a href="./Log-in.html"><i class="bi bi-person"></i></a>
+          <a href="./favourite.html"><i class="bi bi-heart"></i></a>
+          <a href="./shoppingBag.html"><i class="bi bi-minecart-loaded"></i></a>
+        </div>
 
-          <!-- Toggler -->
-          <button class="navbar-toggler toggler" id="button" data-bs-toggle="collapse"
-              data-bs-target="#navbarSupportedContent" aria-label="Toggle navigation">
-              <span class="navbar-toggler-icon"></span>
-          </button>
+        <!-- Toggler -->
+        <button
+          class="navbar-toggler toggler"
+          id="button"
+          data-bs-toggle="offcanvas"
+          data-bs-target="#offcanvasExample"
+          aria-label="Toggle navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
       </div>
       <!-- Start login Page -->
       <div class="fav-parent mt-nav-2 pt-nav">
