Fix menu-btn issue

--- a/pages/products.html
+++ b/pages/products.html
@@ -32,7 +32,7 @@
     <!-- Bootstrap JS -->
 
     <!--#region sidebar menu -->
-    <button class="menu-btn mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
+    <button class="menu-btn resp-hide mx-2 my-4" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasExample" aria-controls="offcanvasExample">
       <i class="bi bi-list"></i>
   </button>
 
