--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
   <body>
     <!--#region sidebar menu -->
     <button
-      class="menu-btn mx-2 my-4"
+      class="menu-btn resp-hide mx-2 my-4"
       type="button"
       data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasExample"
@@ -52,6 +52,7 @@
         >
           <i class="bi bi-x"></i>
         </button>
+
         <img
           src="https://www.ikea.com/eg/en/static/ikea-logo.f7d9229f806b59ec64cb.svg"
         />
