--- a/pages/stores.html
+++ b/pages/stores.html
@@ -29,7 +29,7 @@
   <body>
     <!--#region sidebar menu -->
     <button
-      class="menu-btn mx-2 my-4"
+      class="menu-btn resp-hide mx-2 my-4"
       type="button"
       data-bs-toggle="offcanvas"
       data-bs-target="#offcanvasExample"
