--- a/pages/profile.html
+++ b/pages/profile.html
@@ -315,11 +315,9 @@
 
       <div class="mt-nav-2 pt-nav border-top">
         <div class="col-12 col-md-11 col-lg-10 mx-auto">
-          <div class="row big-title col-12 col-md-7 pt-2">Hello Eman!</div>
-          <div class="row d-flex small-text">
-            <div>Need to change account?</div>
-            <div class="logout">Log out</div>
-          </div>
+          <div class="row big-title col-12 col-md-7 pt-2" id='username'>Hello </div>
+          <div class="row pt-2">Need to change account?
+            <button class="logout col-1" onclick="logout()">Log out</button></div>
 
           <!-- tabs -->
           <div class="row col-12 gx-4 mt-3">
@@ -489,5 +487,6 @@
       crossorigin="anonymous"
     ></script>
     <script src="../assets/js/menu.js"></script>
+    <script src='../assets/js/Profile/profile.js' type="module"></script>
   </body>
 </html>
