Get images from cloud storage (firebase)

--- a/index.html
+++ b/index.html
@@ -343,36 +343,17 @@
 
       <!-- Gallery div -->
       <div class="border-top mt-nav-3 pt-nav pb-5">
-        <div class="image-gallery row g-4">
+        <div class="image-gallery row g-4" id="sale-images">
           <div class="col-12 col-lg-6">
-            <img
-              src="https://www.ikea.com/images/49/b4/49b4ae9edac2dacb67929ff5ececd994.jpg?f=xl"
-              alt="sale"
-            />
+            <img id="sale" alt="sale" />
           </div>
           <div class="image-column col-6 col-lg-3">
-            <img
-              class="short-img"
-              src="https://www.ikea.com/ext/ingkadam/m/6fe00db2519c240f/original/PH180057.jpg?f=xs"
-              alt="dinner table"
-            />
-            <img
-              class="long-img"
-              src="https://www.ikea.com/ext/ingkadam/m/1a58fe57019783c0/original/PH171011.jpg?f=xs"
-              alt
-            />
+            <img class="short-img" alt="dinner table" />
+            <img class="long-img" alt />
           </div>
           <div class="image-column col-6 col-lg-3">
-            <img
-              class="long-img"
-              src="https://www.ikea.com/images/65/38/65383e77617de45341e1e27b2c38ad67.jpg?f=xs"
-              alt
-            />
-            <img
-              class="short-img"
-              src="https://www.ikea.com/images/45/d9/45d9cfbab2bad50883e69eaf6e9e7bfa.jpg?f=xs"
-              alt
-            />
+            <img class="long-img" alt />
+            <img class="short-img" alt />
           </div>
         </div>
       </div>
@@ -1876,13 +1857,7 @@
       </div>
 
       <div
-        class="
-          footer-social-languages
-          d-flex
-          justify-content-between
-          pb-4
-          border-bottom
-        "
+        class="footer-social-languages d-flex justify-content-between pb-4 border-bottom"
       >
         <ul class="social-media-links d-flex">
           <li>
@@ -1937,7 +1912,7 @@
       crossorigin="anonymous"
     ></script>
 
-    <script src="assets/js/main.js"></script>
+    <script src="assets/js/main.js" type="module"></script>
     <script src="./assets/js/menu.js"></script>
   </body>
 </html>
