--- a/pages/category.html
+++ b/pages/category.html
@@ -283,7 +283,7 @@
       <!-- Categories cards -->
       <div>
         <h4 class="head-title">Furniture</h4>
-        <div class="row mx-auto g-3 categories-slidder">
+        <div class="row mx-auto g-3 categories-slidder" id="subSliderItems" >
           <a class="card category-card col-4 col-lg-2" href="#">
             <img
               src="https://www.ikea.com/global/assets/navigation/images/gaming-furniture-55002.jpeg?imwidth=300"
@@ -782,5 +782,6 @@
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/menu.js"></script>   
+    <script src="../assets/js/sliderItem.js" type="module"></script>
 </body>
 </html>
