--- a/pages/guide.html
+++ b/pages/guide.html
@@ -70,8 +70,8 @@
                         class="bi bi-arrow-left-short"></i></button>
                 <span class="head-title">Products</span>
             </div>
-            <ul class="small-text-list my-4">
-                <li><a href="category.html">Furniture</a></li>
+            <ul class="small-text-list my-4" id="slider-items">
+                <!-- <li><a href="category.html">Furniture</a></li>
                 <li><a href="#">Kitchen & appliances</a></li>
                 <li><a href="#">Beds & mattresses</a></li>
                 <li><a href="#">Storage & organisation</a></li>
@@ -82,7 +82,7 @@
                 <li><a href="#">Lighting</a></li>
                 <li><a href="#">Rugs, mats & flooring</a></li>
                 <li><a href="#">Baby & children</a></li>
-                <li><a href="#">More</a></li>
+                <li><a href="#">More</a></li> -->
             </ul>
         </div>
 
@@ -428,6 +428,7 @@
       </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
     <script src="../assets/js/menu.js"></script> 
+    <script src="../assets/js/sliderItem.js" type="module" ></script>
 </body>
 
 </html>
