--- a/pages/category.html
+++ b/pages/category.html
@@ -90,19 +90,8 @@
           </button>
           <span class="head-title">Products</span>
         </div>
-        <ul class="small-text-list my-4">
-          <li><a href="category.html">Furniture</a></li>
-          <li><a href="category.html">Kitchen & appliances</a></li>
-          <li><a href="category.html">Beds & mattresses</a></li>
-          <li><a href="category.html">Storage & organisation</a></li>
-          <li><a href="category.html">Textiles</a></li>
-          <li><a href="category.html">Decoration</a></li>
-          <li><a href="category.html">Bathroom products</a></li>
-          <li><a href="category.html">Outdoor products</a></li>
-          <li><a href="category.html">Lighting</a></li>
-          <li><a href="category.html">Rugs, mats & flooring</a></li>
-          <li><a href="category.html">Baby & children</a></li>
-          <li><a href="category.html">More</a></li>
+        <ul class="small-text-list my-4" id='products-list'>
+       
         </ul>
       </div>
 
@@ -1135,7 +1124,7 @@
 
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
-    <script src="../assets/js/menu.js"></script>   
-    <script src="../assets/js/sliderItem.js" type="module"></script>
+    <script src="../assets/js/menu.js" type="module"></script>   
+    <!-- <script src="../assets/js/sliderItem.js" type="module"></script> -->
   </body>
 </html>
