--- a/index.html
+++ b/index.html
@@ -91,6 +91,13 @@
           <span class="head-title">Products</span>
         </div>
         <ul class="small-text-list my-4" id='products-list'>
+          <li class="text-center">
+            <div class="loadingio-spinner-ball-u6x6jkb8i1s ">
+              <div class="ldio-evnxwkwzfho">
+              <div></div>
+              </div>
+            </div>
+          </li>
         </ul>
       </div>
 
