--- a/index.html
+++ b/index.html
@@ -90,11 +90,11 @@
           </button>
           <span class="head-title">Products</span>
         </div>
-        <ul class="small-text-list my-4" id='products-list'>
+        <ul class="small-text-list my-4" id="products-list">
           <li class="text-center">
-            <div class="loadingio-spinner-ball-u6x6jkb8i1s ">
+            <div class="loadingio-spinner-ball-u6x6jkb8i1s">
               <div class="ldio-evnxwkwzfho">
-              <div></div>
+                <div></div>
               </div>
             </div>
           </li>
@@ -271,7 +271,6 @@
         <div class="collapse navbar-collapse">
           <ul class="navbar-nav me-auto mb-2 mb-lg-0">
             <li class="nav-item">
-
               <a
                 class="nav-link active"
                 data-bs-toggle="offcanvas"
