--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,10 @@
       content="Web site created using create-react-app"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link
+      rel="shortcut icon"
+      href="https://www.ikea.com/eg/en/static/favicon.838d8a3778e4d716eb72.ico"
+    />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
@@ -24,7 +28,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Ikea</title>
+    <title>Buy Furniture & Home Accessories Online in Egypt - IKEA</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
